--- a/assets/style.css
+++ b/assets/style.css
@@ -10,3 +10,77 @@
     height: 100vh;
     background: #eff4efd;
 }
+
+nav{
+    display: flex;
+    width: 84%;
+    margin: auto;
+    padding: 20px 0;
+    align-items: center;
+    justify-content: space-between; 
+}
+
+nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 10px 20px;
+}
+
+nav ul li a{
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;   
+}
+
+nav ul li a:hover{
+    color: red;
+}
+
+.detel{
+    margin-left: 10%;
+    margin-top: 12%;
+} 
+
+.detel h1{
+    font-size: 50px;
+    color: #212121;
+    margin-bottom: 20px;
+}
+
+span{
+    color: orange;
+}
+
+.detel p{
+    color: #555;
+    line-height: 22px;
+}
+
+.detel a{
+      background: #212121;
+      padding: 10px 18px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #fff;
+      display: inline-block;
+      margin: 30px 0;
+      border-radius: 5px;
+} 
+
+.images{
+    width: 20%;
+    height: 30%;
+    position: absolute;
+    bottom: 0;
+    right: 30px;
+}
+
+images img{
+    height: 100px;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%);
+    transition: bottom 1s left 1s;
+
+}
