--- a/assets/style.css
+++ b/assets/style.css
@@ -46,6 +46,11 @@ nav ul li a:hover{
     color: #212121;
     margin-bottom: 20px;
 }
+.detel p{
+    font-size: 50px;
+    color: #212121;
+    margin-bottom: 20px;
+}
 
 span{
     color: orange;
@@ -78,9 +83,9 @@ span{
 images img{
     height: 100px;
     position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translate(-50%);
+    left: 20%;
+    bottom: 80%;
+    transform: translate(-100%);
     transition: bottom 1s left 1s;
 
 }
